--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,10 @@
-<IfModule mod_rewrite.c>
+AddDefaultCharset utf-8
 
-  RewriteEngine on
-  RewriteRule ^$ public/ [L]
-  RewriteRule (.*) public/$1 [L]
+ErrorDocument 401 http://401.html
+ErrorDocument 403 http://403.html
+ErrorDocument 404 http://404.html
+ErrorDocument 500 http://500.html
 
-</IfModule>
+RewriteEngine on
+RewriteRule ^$ public/ [L]
+RewriteRule (.*) public/$1 [L]
